@@ -1,5 +1,7 @@
 
 Version 0.8	- xx July 2001
+  * Add -o/--override warning when a method has different signature 
+	than one being overridden in a base class
   * Fix checking files in standard library before local file
   * Add -F/--rcfile to generate a .pycheckrc file
   * Fix spurious warning when using from X import Y and imports in methods
